<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/tools">
    <data>
        <variable
            name="handler"
            type="de.fenomedia.colorconverter.MainBindingHandlers"/>
    </data>

    <FrameLayout
        android:orientation="vertical"
        android:background="@color/panelColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">
            <!-- CMYK -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/lbl_cyan"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:ems="4"
                    android:layout_gravity="center_vertical"
                    android:text="@string/cyan"
                    />
                <EditText
                    android:id="@+id/txt_cyan"
                    android:inputType="numberDecimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:maxLength="5"
                    android:text="@{String.valueOf(handler.cyan)}"
                    android:ems="3"
                    android:layout_gravity="center_horizontal"
                    />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/lbl_magenta"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:ems="4"
                    android:layout_gravity="center_vertical"
                    android:text="@string/magenta"
                    />
                <EditText
                    android:id="@+id/txt_magenta"
                    android:inputType="numberDecimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(handler.magenta)}"
                    android:layout_column="1"
                    android:maxLength="5"
                    android:ems="3"
                    android:layout_gravity="center_horizontal"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/lbl_yellow"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:ems="4"
                    android:layout_gravity="center_vertical"
                    android:text="@string/yellow"
                    />
                <EditText
                    android:id="@+id/txt_yellow"
                    android:inputType="numberDecimal"
                    android:layout_width="wrap_content"
                    android:text="@{String.valueOf(handler.yellow)}"
                    android:layout_height="wrap_content"
                    android:maxLength="5"
                    android:layout_column="1"
                    android:ems="3"
                    android:layout_gravity="center_horizontal"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/lbl_key"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:ems="4"
                    android:layout_gravity="center_vertical"
                    android:text="@string/key"
                    />
                <EditText
                    android:id="@+id/txt_key"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:text="@{String.valueOf(handler.key)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:ems="3"
                    android:layout_gravity="center_horizontal"
                    />
            </TableRow>
            <!-- RGB -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">
                <EditText
                    android:id="@+id/txt_red"
                    android:inputType="number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="3"
                    android:text="@{String.valueOf(handler.red)}"
                    android:layout_column="0"
                    android:layout_span="2"
                    android:hint="@string/red" />

                <SeekBar
                    android:id="@+id/seek_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:setOnSeekBarChangeListener="@{handler.seekBarChangeListener}"
                    android:max="255"
                    android:tag="redSeek"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:inputType="number"
                    android:id="@+id/txt_green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_span="2"
                    android:maxLength="3"
                    android:text="@{String.valueOf(handler.green)}"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/green" />

                <SeekBar
                    android:id="@+id/seek_green"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:max="255"
                    android:tag="greenSeek"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:setOnSeekBarChangeListener="@{handler.seekBarChangeListener}"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/txt_blue"
                    android:inputType="number"
                    android:maxLength="3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@{String.valueOf(handler.blue)}"
                    android:layout_span="2"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/blue" />

                <SeekBar
                    android:id="@+id/seek_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:setOnSeekBarChangeListener="@{handler.seekBarChangeListener}"
                    android:max="255"
                    android:tag="blueSeek"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"/>
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@{handler.hexstr}"
                    android:layout_span="3"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtHexColor"
                    android:layout_column="0"
                    android:textSize="32sp"
                    android:gravity="center" />
            </TableRow>
        </TableLayout>



        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_vertical|right|top"
            android:layout_margin="20dp"
            android:padding="2dp"
            android:background="@drawable/image_border"
            android:src="@{handler.rgbcolor}"/>
    </FrameLayout>

</layout>